manifests/apps/kong-transform-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-transform-echo
  namespace: kong-demo
  labels:
    app: kong-transform-echo
    app.kubernetes.io/part-of: kong-community-crc-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-transform-echo
  template:
    metadata:
      labels:
        app: kong-transform-echo
        app.kubernetes.io/part-of: kong-community-crc-lab
    spec:
      containers:
        - name: http-echo
          image: docker.io/mendhak/http-https-echo:41
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
